--- a/20_Library/22_Humanities/规划/未来/想过的生活.md
+++ b/20_Library/22_Humanities/规划/未来/想过的生活.md
@@ -320,7 +320,7 @@ F -->|需要调整| D1
 2. **如何找到自己的人生目标**
 
 - **自我反思**
-    - **[[1. 陈述过去]]**：回顾自己的成长历程，寻找那些让自己感到兴奋、满足或者有成就感的时刻。
+    - **[[1. 陈述过去.mdenc]]**：回顾自己的成长历程，寻找那些让自己感到兴奋、满足或者有成就感的时刻。
     - 例如，如果你在学校组织的志愿者活动中帮助贫困儿童时，内心充满喜悦和满足感，这可能暗示你对社会公益事业有潜在的兴趣，社会贡献可能是你人生目标的一部分。
     - **分析兴趣爱好**：仔细思考自己的兴趣所在。兴趣是发现人生目标的重要线索。如果你热爱绘画，那么在艺术领域追求职业发展或者通过绘画为他人带来美的享受可能是你的目标。例如，梵高对绘画的热爱驱使他不断创作，尽管生前未得到广泛认可，但他的画作如今为无数人带来美的震撼，绘画成为他人生目标的核心体现。
     - **挖掘价值观**：价值观会引导你的人生目标方向。如果公平正义是你最看重的价值观，那么你可能会选择从事法律相关工作，为维护公平正义而奋斗，这就可能成为你的人生目标。
